# Apolo-11

./: .gitignore  LICENSE  README.md
programa/: README.md  pyproject.toml  setup.cfg
programa/apolo_11/: generate_data.py  launcher.py
programa/apolo_11/generate_data/: date.py  device.py  device_status.py  hash.py
programa/apolo_11/simulator/: generate.py  launcher.py  path_test.py  tools.py
programa/apolo_11/simulator/config/: config.yaml
programa/apolo_11/simulator/dashboard/: dataframe_dashboard.py  visualization_dashboard.py
programa/apolo_11/simulator/devices/: report.py
programa/apolo_11/simulator/generate_data/: date.py  device.py  device_status.py  hash.py  mission.py
programa/apolo_11/simulator/generate_files/: directory.py
programa/apolo_11/simulator/options_spacecraft/: spacecraft.py  spacecraft_default.py  spacecraft_nasa.py  spacecratf_rocket.py
programa/apolo_11/simulator/reports/: generate_reports.py  report_dir_2024-01-16 19_51_32.771687.txt  report_dir_2024-01-16 19_51_49.240012.txt  report_generator.py
programa/tests/: conftest.py  tools.py
